# fastack-celery

./: .gitignore  README.md  pyproject.toml
examples/celery/: Pipfile  README.md  docker-compose.yml  entrypoint.sh
examples/celery/app/: main.py  models.py  tasks.py
examples/celery/app/controllers/: __init__.py  counter.py
examples/celery/app/settings/: local.py
examples/celery/migrations/: env.py
examples/celery/migrations/versions/: 9aa2aebe5d0c_.py
fastack_celery/: __init__.py  globals.py
