[tool.poetry]
name = "fastack-celery"
version = "0.1.0"
description = "Celery Integration For Fastack"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
fastack = "^4.0.0"
celery = "^5.2.3"

[tool.poetry.dev-dependencies]
ipython = "7.31.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
